--- a/transparent/build.gradle
+++ b/transparent/build.gradle
@@ -1,6 +1,5 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
@@ -31,6 +30,7 @@ android {
 dependencies {
   implementation fileTree(dir: 'libs', include: ['*.jar'])
 
+  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${versions.kotlin}"
   implementation "androidx.constraintlayout:constraintlayout:${versions.constraintLayout}"
   implementation "androidx.appcompat:appcompat:${versions.supportLibrary}"
   implementation "com.google.android.material:material:${versions.supportLibrary}"
